<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

  <parent>
    <groupId>org.hammerlab</groupId>
    <artifactId>scala-parent-pom</artifactId>
    <version>1.0.3</version>
    <relativePath />
  </parent>

  <modelVersion>4.0.0</modelVersion>
  <artifactId>guacamole</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>
  <name>guacamole: variant caller</name>

  <properties>
    <github.repo>hammerlab/guacamole</github.repo>
    <java.version>1.8</java.version>
    <scala.version>2.10.6</scala.version>
    <scala.version.prefix>2.10</scala.version.prefix>
    <hadoop.version>2.7.0</hadoop.version>
    <spark.version>1.6.1</spark.version>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.scalatest</groupId>
        <artifactId>scalatest-maven-plugin</artifactId>
        <configuration>
          <argLine>-Xmx4g -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.1</version>
        <configuration>
          <transformers>
            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <mainClass>org.hammerlab.guacamole.Main</mainClass>
            </transformer>

            <!-- Akka (which Spark depends on) needs this reference.conf munging in order to work correctly in -->
            <!-- shaded JARs, cf. http://stackoverflow.com/questions/31011243/#31011315 -->
            <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
              <resource>reference.conf</resource>
            </transformer>

            <!-- Necessary for Hadoop to load local files correctly, cf. http://stackoverflow.com/a/27532248/544236 -->
            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
          </transformers>
          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/*.SF</exclude>
                <exclude>META-INF/*.DSA</exclude>
                <exclude>META-INF/*.RSA</exclude>
                <exclude>META-INF/LICENSE</exclude>
                <exclude>META-INF/license</exclude>
              </excludes>
            </filter>
          </filters>
          <artifactSet>
            <excludes>
              <exclude>org.eclipse.jdt:*</exclude>
              <exclude>org.scalatest:*</exclude>
              <exclude>org.apache.maven:lib:tests</exclude>
            </excludes>
          </artifactSet>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>com.esotericsoftware.kryo</groupId>
      <artifactId>kryo</artifactId>
      <version>2.21</version>
    </dependency>
    <dependency>
      <groupId>args4j</groupId>
      <artifactId>args4j</artifactId>
      <version>[2.0.29,)</version>
    </dependency>
    <dependency>
      <groupId>org.bdgenomics.adam</groupId>
      <artifactId>adam-core_${scala.version.prefix}</artifactId>
      <version>0.19.0</version>
    </dependency>
    <dependency>
      <groupId>org.bdgenomics.bdg-formats</groupId>
      <artifactId>bdg-formats</artifactId>
      <version>0.7.0</version>
    </dependency>
    <dependency>
      <groupId>org.bdgenomics.qc-metrics</groupId>
      <artifactId>qc-metrics-core_${scala.version.prefix}</artifactId>
      <version>0.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.spire-math</groupId>
      <artifactId>spire_${scala.version.prefix}</artifactId>
      <version>0.11.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-core_${scala.version.prefix}</artifactId>
      <version>${spark.version}</version>
    </dependency>
    <dependency>
      <groupId>org.apache.spark</groupId>
      <artifactId>spark-mllib_${scala.version.prefix}</artifactId>
      <version>${spark.version}</version>
    </dependency>
    <dependency>
      <groupId>org.scalanlp</groupId>
      <artifactId>breeze_${scala.version.prefix}</artifactId>
      <version>0.12</version>
    </dependency>
    <dependency>
      <groupId>org.seqdoop</groupId>
      <artifactId>htsjdk</artifactId>
      <version>1.118</version>
    </dependency>
    <dependency>
      <groupId>org.seqdoop</groupId>
      <artifactId>hadoop-bam</artifactId>
      <version>7.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-math3</artifactId>
      <version>3.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.hadoop</groupId>
      <artifactId>hadoop-client</artifactId>
      <version>${hadoop.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>18.0</version>
    </dependency>
    <dependency>
      <groupId>org.hammerlab</groupId>
      <artifactId>magic-rdds</artifactId>
      <version>1.0.0</version>
    </dependency>
    <dependency>
      <groupId>org.clapper</groupId>
      <artifactId>grizzled-slf4j_${scala.version.prefix}</artifactId>
      <version>1.0.3</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>2.5</version>
    </dependency>

    <!-- Test deps -->
    <dependency>
      <groupId>com.holdenkarau</groupId>
      <artifactId>spark-testing-base_${scala.version.prefix}</artifactId>
      <version>${spark.version}_0.4.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.bdgenomics.bdg-utils</groupId>
      <artifactId>bdg-utils-misc</artifactId>
      <version>0.1.1</version>
      <type>test-jar</type>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <profiles>
    <profile>
      <!-- Default profile: build Guacamole jar with shaded Guava. -->
      <id>guac</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <executions>
              <execution>
                <id>default</id>
                <phase>package</phase>
                <goals>
                  <goal>shade</goal>
                </goals>
                <configuration>
                  <finalName>guacamole-${project.version}</finalName>
                  <relocations>
                    <relocation>
                      <pattern>com.google.common</pattern>
                      <shadedPattern>org.hammerlab.guavarelocated</shadedPattern>
                      <includes>
                        <include>com.google.common.**</include>
                      </includes>
                    </relocation>
                  </relocations>
                  <artifactSet>
                    <includes>
                      <include>org.hammerlab.guacamole:*</include>
                      <include>com.google.guava:*</include>
                    </includes>
                  </artifactSet>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>cluster</id>
      <dependencies>
        <dependency>
          <groupId>org.apache.hadoop</groupId>
          <artifactId>hadoop-client</artifactId>
          <version>${hadoop.version}</version>
          <scope>provided</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.spark</groupId>
          <artifactId>spark-core_${scala.version.prefix}</artifactId>
          <version>${spark.version}</version>
          <scope>provided</scope>
        </dependency>
      </dependencies>
    </profile>
    <profile>
      <!-- "uber" profile: build a JAR with Guacamole and all transitive dependencies shaded, and Guava relocated. -->
      <id>uber</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <executions>
              <execution>
                <id>deps</id>
                <phase>package</phase>
                <goals>
                  <goal>shade</goal>
                </goals>
                <configuration>
                  <finalName>guacamole-with-deps-${project.version}</finalName>
                  <relocations>
                    <relocation>
                      <pattern>com.google.common</pattern>
                      <shadedPattern>org.hammerlab.guavarelocated</shadedPattern>
                      <includes>
                        <include>com.google.common.**</include>
                      </includes>
                    </relocation>
                  </relocations>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <!-- "deps" profile: build a JAR with just Guacamole's transitive dependencies. -->
      <id>deps</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-shade-plugin</artifactId>
            <executions>
              <execution>
                <id>deps</id>
                <phase>package</phase>
                <goals>
                  <goal>shade</goal>
                </goals>
                <configuration>
                  <finalName>guacamole-deps-only-${project.version}</finalName>
                  <artifactSet>
                    <excludes>
                      <exclude>org.hammerlab.guacamole:*</exclude>
                    </excludes>
                  </artifactSet>
                </configuration>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
